Traefik/Ingressroute-non-tls/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-webapp
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: app
        image: fpommerening/docker-training:latest
        ports:
        - containerPort: 80
