Traefik/Ingressroute-non-tls/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp-ingress-nontls
  # annotations: 
  #  kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`webapp.demo-apps.de`)
    kind: Rule
    services:
    - name: webapp-cluster-srv
      port: 80
